app/assets/stylesheets/pdf.css.scss
.stripe{
  background-color: lightblue;
}
.live-allocate-results{
  .graph{
    margin-top: 3em;
    .theme{ height: 1.4em; background-color: #D0DBFF;}
    .text {margin: -1.4em 0 0 .2em;}
    td.option{text-align: left;}
  }
}
.row{
  width: 100%;

}

.delib-title{
  color: #1057AA;
  margin: .5em 0;
}
.type-section{
  margin-bottom: 40px;
}
.comment-type-title{
  page-break-after: avoid;
}

.additional-suggestions{
  page-break-inside: avoid;
}

.table_comment{
  page-break-inside: avoid;
  .body {
    font-size: 1.2em;
    margin: 8px 0;
    padding: 8px;
    background-color: lightcyan;
    -moz-border-radius: 15px;
    border-radius: 6px;
    position: relative;
  }
  .arrow {
    position: absolute;
    bottom: -24px;
    left: 4px;
    width: 0;
    height: 0;
    border: 12px solid transparent;
    border-top-color: lightcyan;
  }

  .reasons{
    .hdr{ font-weight: normal; margin: 4px 0; font-style: italic;}
    ul{
      margin: 0;
      li{margin-left: 20px;}
    }
    .reason{
      margin: 4px 0;
      .type{ font-style: italic; font-weight: bold;}
    }
  }

  .footer{
    margin-left: 20px;
  }
  margin-bottom: 20px;
}

.live-themes td {
  vertical-align: top;
  padding-bottom: 12px; }
.live-themes td.letter {
  font-weight: bold;
  font-size: 2em;
  line-height: 1em;
  padding-right: 16px; }
.live-themes td.live-theme p:first-child {
  font-weight: bold;
  font-size: 1.4em;
  line-height: 1.2em;
  margin-top: 0;
}


.mca-detailed-report{
  table{min-width:600px;}
  //table,td, th{ border: 1px solid black;}
  td{ text-align: left; vertical-align: top; padding:1em;}
  th{ text-align: center; vertical-align: middle; padding:0 1em;}

  .mixed-recs{
    padding-left: 20px;
    margin-top: -20px;
    &.inc{ margin-bottom: 1em;}
  }
  .category{
    font-style: italic;
    line-height: 1.12em;
    margin-bottom: 1.5em;
  }
}

